SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "dlock")
SET(CPACK_GENERATOR "TGZ")
SET(CPACK_PACKAGE_VENDOR "frederik.deweerdt@gmail.com")
SET(CPACK_PACKAGE_FILE_NAME "dlock-0.0.1-linux-i686")
SET(CPACK_SOURCE_GENERATOR "TGZ")
SET(CPACK_SOURCE_PACKAGE_FILE_NAME "dlock-0.0.1-src")
INCLUDE(CPack)

SET(LIB_NAME dlock)
SET(DLOCK_SRCS dlock.c backtrace.c)
ADD_LIBRARY(${LIB_NAME} SHARED ${DLOCK_SRCS})
SET_TARGET_PROPERTIES(${LIB_NAME} PROPERTIES COMPILE_FLAGS "-O2 -Wall -fPIC -DDLOCK")
SET_TARGET_PROPERTIES(${LIB_NAME} PROPERTIES LINK_FLAGS "-nostartfiles")
TARGET_LINK_LIBRARIES(${LIB_NAME} dl)

INSTALL(TARGETS ${LIB_NAME}
  RUNTIME DESTINATION bin
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib/static)

SET(BUILD_TEST ON)
IF(BUILD_TEST)
	SET(LINK_DIRECTORIES ${LINK_DIRECTORIES} .)
	ADD_EXECUTABLE(test1 test1.c)
	TARGET_LINK_LIBRARIES(test1 pthread)
		
	ADD_EXECUTABLE(test2 test2.c)
	SET_TARGET_PROPERTIES(test2 PROPERTIES COMPILE_FLAGS "-O2 -Wall -fPIC -DDLOCK")
	TARGET_LINK_LIBRARIES(test2 ${LIB_NAME} pthread)
ENDIF(BUILD_TEST)
