SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "dlock")
SET(CPACK_GENERATOR "TGZ")
SET(CPACK_PACKAGE_VENDOR "frederik.deweerdt@gmail.com")
SET(CPACK_PACKAGE_FILE_NAME "dlock-0.0.1-linux-i686")
SET(CPACK_SOURCE_GENERATOR "TGZ")
SET(CPACK_SOURCE_PACKAGE_FILE_NAME "dlock-0.0.1-src")
INCLUDE(CPack)

SET(CMAKE_C_FLAGS "-O2 -Wall")

SET(LIB_NAME dlock)
SET(DLOCK_SRCS dlock.c)
ADD_LIBRARY(${LIB_NAME} SHARED ${DLOCK_SRCS})

INSTALL(TARGETS ${LIB_NAME}
  RUNTIME DESTINATION bin
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib/static)

SET(BUILD_TEST ON)
IF(BUILD_TEST)
	SET(LINK_DIRECTORIES ${LINK_DIRECTORIES} .)
	SET(TEST_SRC test.c)
	ADD_EXECUTABLE(test ${TEST_SRC})
	TARGET_LINK_LIBRARIES(test ${LIB_NAME})
ENDIF(BUILD_TEST)
